elasticsearch/elasticsearch.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  serviceName: "elasticsearch"
  replicas: 2
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: topology.kubernetes.io/zone
                    operator: In
                    values:
                      - asia-southeast1-a
                      - asia-southeast1-b
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: "app"
                      operator: In
                      values:
                        - elasticsearch
                topologyKey: "kubernetes.io/hostname"  # Soft anti-affinity to prevent same node scheduling
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:8.9.0  # Use the appropriate version
          resources:
            limits:
              memory: 1Gi
              cpu: 200m
            requests:
              memory: 1Gi
              cpu: 200m
          ports:
            - containerPort: 9200  # Elasticsearch HTTP
              name: http
            - containerPort: 9300  # Elasticsearch transport
              name: transport
          volumeMounts:
            - name: elasticsearch-data
              mountPath: /usr/share/elasticsearch/data  # Persistent storage path
      volumes:
        - name: elasticsearch-data
          persistentVolumeClaim:
            claimName: elasticsearch-data
  
  volumeClaimTemplates:
    - metadata:
        name: elasticsearch-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "regionalpd-storageclass"  # For regional persistent disks
        resources:
          requests:
            storage: 20Gi
