elasticsearch/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: "nginx"
  rules:
  - host: "es.example.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: elasticsearch-master
            port:
              number: 9200
